--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -26,6 +26,7 @@
 <body>
   <div class="vertical-center">
     <h1>The app is running correctly.Continuous Deployment Baby!!!!</h1>
+    <h2>I feel like a Pipeline GOD!</h2>
 
 
     <p>Welcome to the Sparta Test App</p>
