--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -29,7 +29,7 @@
     <h2>I feel like a Pipeline GOD!</h2>
 
 
-    <p>Welcome to the Sparta Test App</p>
+    <p>Welcome to the Test App</p>
     <img src="/images/logo.png" />
   </div>
 </body>
